--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "localhost:1313"
+baseURL = "kawaiiplat.xyz"
 title   = "./home/kawaiiPad"
 languageCode = "en-us"
 theme = "hello-friend-ng"
